<resources>
    <string name="app_name">Data Rater</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="relationship">Relationship</string>
    <string name="casual_dates">Casual Dates</string>
    <string name="one_night">One Night</string>
    <string name="random_match">Random Match</string>
    <string name="user_picture">User Picture</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_filters">FiltersActivity</string>
    <string name="title_activity_swiping">SwipingActivity</string>
    <string name="start">Start</string>
    <string name="logo">Logo</string>
    <string name="title_activity_rater">RaterActivity</string>
    <string name="personality">Personality</string>
    <string name="response_rate">Response Rate</string>
    <string name="looks_like_photos">Looks Like Photos</string>
    <string name="trust_worthy">Trust Worthy</string>
    <string name="personality_min">Personality Minimum</string>
    <string name="response_rate_min">Response Rate Minimum</string>
    <string name="looks_like_photos_min">Looks Like Photos Minimum</string>
    <string name="trust_worthy_min">Trust Worthy Minimum</string>
    <string name="settingsButton">Setting Button</string>
    <string name="already_registered_log_in">Already Registered Log in</string>
    <string name="not_registered">Not Registered?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_register2">Register2Activity</string>
    <string name="name">Name</string>
    <string name="both">Both</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="any">Any</string>
    <string name="what_gender_are_you">What gender are you?</string>
    <string name="complete">Complete</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="title_of_review">Title of review</string>
    <string name="review_of_person">Review of person</string>
    <string name="submit">Submit</string>
    <string name="filter_people">Filter People</string>
    <string name="save">Save</string>
    <string name="title_activity_about_them">AboutThem</string>
</resources>
